2004-01-14  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.3

2004-01-08  David Coulthart  <davec@columbia.edu>

	* libgnomeui/gnome-authentication-manager.c (construct_full_password_dialog):
	s/gnome_keyring_is_availible/gnome_keyring_is_available/

2004-01-06  Alexander Larsson <alexl@redhat.com>

	* libgnomeui/gnome-icon-lookup.c (gnome_icon_lookup): 
	Treat image/svg+xml as svgs too.

Mon Jan 05 17:21:19 2004  George Lebl <jirka@5z.com>

	* libgnomeui/gnome-file-entry.c: make _set_default_path work if
	  the entry field is empty.  That is, set the file selector path
	  to this.

2004-01-04  Anders Carlsson  <andersca@gnome.org>

	* libgnomeui/gnome-password-dialog.h: Remove extra comma
	in enumeration. (#130505, Franz Klammer).

2003-12-30  Anders Carlsson  <andersca@gnome.org>

	* libgnomeui/gnome-druid.c (gnome_druid_remove): 
	Handle the last page being the current page when removing it, 
	(Fixes #85675, reported by Damon Chaplin).

2003-12-29  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "hr" to ALL_LINGUAS.

2003-12-28  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.2

2003-12-26  Fernando Herrera  <fherrera@onirica.com>

	* glade/glade-gnome.c: Show documenters in gnome-about dialog and only show 
	translators if they exist. (Fix two typos, bugzilla #119382 and #11934).
	Patches from Jon Willeke.

2003-12-19  Alexander Larsson  <alexl@redhat.com>

	* libgnomeui/gnome-icon-lookup.h:
	Include gnome-icon-theme.h for backwards compat.

2003-12-18  Alexander Larsson  <alexl@redhat.com>

	* libgnomeui/gnome-icon-theme.c:
	Fix typo that broke build

2003-12-18  Alexander Larsson  <alexl@redhat.com>

	* libgnomeui/gnome-icon-lookup.c: 
	* libgnomeui/gnome-icon-theme.[ch]:
	Remove/Internalize some new api I accidentally added

2003-12-18  Alexander Larsson  <alexl@redhat.com>

        * doc/reference/tmpl/gnome-icon-theme.sgml:
	* doc/reference/tmpl/gnome-icon-lookup.sgml:
	Update
	